# nmpde-project-Fisher-Kolmogorov-equation

./: .gitignore  CMakeLists.txt  README.md
data/: params.csv
scripts/: convert_mesh.geo
src/1d/: FisherKolmogorov1d.cpp  FisherKolmogorov1d.hpp  simulation1d.cpp
src/3d/: DiffusionType.hpp  FisherKolmogorov3d.cpp  FisherKolmogorov3d.hpp  SimulationParams.cpp  SimulationParams.hpp  simulation3d.cpp
